--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.2.6.RELEASE</version>
+                <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
