--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.xalf</groupId>
     <artifactId>rest</artifactId>
-    <version>${parent.version}</version>
+    <version>1.0-SNAPSHOT</version>
 
     <name>rest</name>
     <!-- FIXME change it to the project's website -->
